small changes in format

--- a/main.tex
+++ b/main.tex
@@ -48,9 +48,10 @@ variables alone.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %Fill in the appropriate information below
 \newcommand{\norm}[1]{\left\lVert#1\right\rVert}     
-\newcommand\course{Course}                      % <-- course name   
+\newcommand\course{course \_ name}                      % <-- course name   
 \newcommand\hwnumber{1}                         % <-- homework number
 \newcommand\Information{XXX/xxxxxxxx}           % <-- personal information
+\newcommand\auther{Hao Jerry Fang} 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %Page setup
@@ -94,16 +95,16 @@ innertopmargin=\topskip,
         \vspace*{3cm}
             
         \Huge
-        \textbf{Assignment}
+        \textbf{\course}
             
         \vspace{1cm}
         \huge
-        Homework\hwnumber
+        Homework \hwnumber
             
         \vspace{1.5cm}
         \Large
             
-        \textbf{Author}                      % <-- author
+        \textbf{\auther}                      % <-- author
         
             
         \vfill
